Fixed up some formatting issues with Bootstrap

--- a/activity_tracker/app/views/admins/index.html.erb
+++ b/activity_tracker/app/views/admins/index.html.erb
@@ -3,14 +3,14 @@
 	<p>Hello <%= @current_user.name %>!  Below are the users signed up for Activity Tracker. 
 	</p><br><br>
 
-	<table id="user_table" align="center">
+	<table id="user_table" align="center" width="900px">
 	    <thead>
 	      <tr>
-	        <th scope="col">Name</th>
-	        <th scope="col">DOB</th>
-	        <th scope="col">MRN</th>
-	        <th scope="col">Authorized Apps</th>
-	        <th scope="col"></th>
+	        <th scope="col" class="col-md-1">Name</th>
+	        <th scope="col" class="col-md-1">DOB</th>
+	        <th scope="col" class="col-md-1">MRN</th>
+	        <th scope="col" class="col-md-1">Authorized Apps</th>
+	        <th scope="col" class="col-md-1"></th>
 	      </tr>
 	    </thead>
 
