--- a/activity_tracker/app/assets/stylesheets/style.css
+++ b/activity_tracker/app/assets/stylesheets/style.css
@@ -308,9 +308,11 @@ table#activity_table {
   border-spacing: 25px 0;
 }
 
-td {
-  padding: 0px 0;
+th, tr{
+  padding: 5px 0;
+  text-align: center;
 }
+
 
 table#user_table {
   border-collapse: separate;
