Updated Moves to allow for multiple requests for data sets that are too large

--- a/activity_tracker/app/views/patients/moves_activity.html.erb
+++ b/activity_tracker/app/views/patients/moves_activity.html.erb
@@ -21,6 +21,7 @@
 	  </p>
 	<% end %> 
 
+	<% @formatted_parsed_data %> 
 
 	  <br>
 	  	<%= button_to "Refresh tables", moves_activity_path, params:{:startdateymd => @startdateymd, :enddateymd => @enddateymd}, method: :get%>
